--- a/index.html
+++ b/index.html
@@ -3,18 +3,6 @@
 
 <head>
     <script>
-        var acrum_extra = {
-            "id": 93729,
-            "type": "landing",
-            "ccodes": [],
-            "offer_id": 36027,
-            "esub": "-7EBRQCgQAAAcoPQMDu4wAADchbgH6BwADD9fGimYREQoRCRoRDUIRDVoDdXMAAH9hZGNvbWJv_zA0Q3hzVURiAANtQQ",
-            "location": null,
-            "ip_city": "Osasco",
-            "iew": "true"
-        };
-    </script>
-    <script>
         var lang_locale = "pt";
     </script>
     <script type="text/javascript">
@@ -27,8 +15,7 @@
         var iew = true;
         var offer_countries = {};
     </script>
-    <script src="content/js/jquery-1.12.4.min.js" type="text/javascript">
-    </script>
+    <script src="content/js/jquery-1.12.4.min.js" type="text/javascript"></script>
     <style>
         .ac_footer {
             position: relative;
@@ -56,7 +43,7 @@
     <!--retarget-->
     <meta charset="utf-8">
     <title>DM-NORM</title>
-    <meta content="DIAXIL" name="description">
+    <meta content="DM-NORM" name="description">
     <meta content="width=device-width" name="viewport">
     <link data-pagespeed-lsc-url="https://a.diaxil-new.com/img/product1.png" href="content/images/product1.png" rel="icon">
     <link href="content/css/styles.min.css" rel="stylesheet">
@@ -67,8 +54,7 @@
 <body>
     <!--retarget-->
     <!--retarget-->
-    <script src="content/js/9.min.js" type="text/javascript">
-    </script>
+    <script src="content/js/9.min.js" type="text/javascript"></script>
     <div class="main-banner">
         <div class="container">
             <div class="logo wow fadeInDown lt0" style="visibility: visible; animation-name: fadeInDown;">DM-NORM</div>
@@ -98,13 +84,29 @@
                                 </div>
                             </div>
                         </div>
-                        <form action="order.php" class="order_form" method="POST"><input name="offer_id" type="hidden" value="36027"><input name="esub" type="hidden" value="-7EBRQCgQAAAcoPQMDu4wAADchbgH6BwADD9fGimYREQoRCRoRDUIRDVoDdXMAAH9hZGNvbWJv_zA0Q3hzVURiAANtQQ"><input name="template_name" type="hidden" value="l5qIy950RFpU1oz"><input name="country_code" type="hidden" value="RO"><input name="payment_redirect" type="hidden" value="0"><input name="broker_redirect" type="hidden" value="0"><input name="shipment_price" type="hidden" value="0"><input name="total_price" type="hidden" value="159"><input name="price_vat" type="hidden" value="0.0"><input name="shipment_vat" type="hidden" value="0.0"><input name="total_price_wo_shipping" type="hidden" value="159"><input name="price" type="hidden" value="159"><input name="old_price" type="hidden" value="318"><input name="currency" type="hidden" value="RON"><input name="package_id" type="hidden" value="0"><input name="package_prices" type="hidden" value="{}">
+                        <form action="#" class="order_form" method="POST"><input name="offer_id" type="hidden"><input name="esub" type="hidden">
                             <div class="main-banner-price">
-                                <div class="price_old"><text class="price_land_s4"> 318 </text><text class="price_land_curr"> RON </text></div>
-                                <div class="price_main"><text class="price_land_s1"> 159 </text><text class="price_land_curr"> RON </text> ** </div>
-                            </div><label><select id="country_code_selector" name="country_code">
+                                <div class="price_old">
+                                    <text class="price_land_s4"> 298 </text>
+                                    <text class="price_land_curr"> RON </text>
+                                </div>
+                                <div class="price_main">
+                                    <text class="price_land_s1"> 149 </text>
+                                    <text class="price_land_curr"> RON </text> ** 
+                                </div>
+                            </div>
+                            <label>
+                                <select id="country_code_selector" name="country_code">
                                     <option value="RO"> România </option>
-                                </select></label><label><input name="name" placeholder="Numele tău"></label><label><input class="only_number" name="phone" placeholder="Numărul de telefon" type="tel"></label><button class="main-form-button wow tada lt8 js_submit button__text" data-wow-delay="1.5s" style="visibility: visible; animation-delay: 1.5s; animation-name: tada;"> Comandă </button>
+                                </select>
+                            </label>
+                            <label>
+                                <input name="name" placeholder="Numele tău">
+                            </label>
+                            <label>
+                                <input class="only_number" name="phone" placeholder="Numărul de telefon" type="tel">
+                            </label>
+                            <button class="main-form-button wow tada lt8 js_submit button__text" data-wow-delay="1.5s" style="visibility: visible; animation-delay: 1.5s; animation-name: tada;"> Comandă </button>
                             <div class="b-note"> **Privind costu livrării, va adresați la consultant </div>
                         </form>
                     </div>
@@ -304,7 +306,7 @@
                                 </div>
                             </div>
                         </div>
-                        <form action="order.php" class="order_form" id="order_form" method="POST"><input name="offer_id" type="hidden" value="36027"><input name="esub" type="hidden" value="-7EBRQCgQAAAcoPQMDu4wAADchbgH6BwADD9fGimYREQoRCRoRDUIRDVoDdXMAAH9hZGNvbWJv_zA0Q3hzVURiAANtQQ"><input name="template_name" type="hidden" value="l5qIy950RFpU1oz"><input name="country_code" type="hidden" value="RO"><input name="payment_redirect" type="hidden" value="0"><input name="broker_redirect" type="hidden" value="0"><input name="shipment_price" type="hidden" value="0"><input name="total_price" type="hidden" value="159"><input name="price_vat" type="hidden" value="0.0"><input name="shipment_vat" type="hidden" value="0.0"><input name="total_price_wo_shipping" type="hidden" value="159"><input name="price" type="hidden" value="159"><input name="old_price" type="hidden" value="318"><input name="currency" type="hidden" value="RON"><input name="package_id" type="hidden" value="0"><input name="package_prices" type="hidden" value="{}">
+                        <form action="#" class="order_form" id="order_form" method="POST">
                             <div class="main-banner-price">
                                 <div class="price_old"><text class="price_land_s4"> 298 </text><text class="price_land_curr"> RON </text></div>
                                 <div class="price_main"><text class="price_land_s1"> 149 </text><text class="price_land_curr"> RON </text> ** </div>
@@ -340,17 +342,12 @@
             </div>
         </div>
     </div>
-    <script src="content/js/scripts.min.js">
-    </script>
+    <script src="content/js/scripts.min.js"></script>
     <script src="content/js/owl.carousel.min.js">
     </script>
     <script src="content/js/slider.js">
     </script>
     <script defer src="content/js/custom-functions2.min.js">
-    </script>
-    <script async src="content/js/watch.js">
-    </script>
-    <script async src="content/js/custom.min.js">
     </script>
     <script>
         $(function() {
@@ -423,7 +420,6 @@
             }
         }
     </style>
-    <script src="content/js/js.cookie.min.js" type="text/javascript">
     </script>
     <script>
         $(document).ready(function() {
@@ -440,30 +436,12 @@
     <!--retarget-->
     <script src="content/js/10_11_12.min.js" type="text/javascript">
     </script>
-    <div class="ac_footer"><span> © 2024 Copyright. All rights reserved. </span><br><a href="//febaleo.cc/content/shared/html/policy_en.html" target="_blank"> Privacy policy </a> | <a href="http://ac-feedback.com/report_form/"> Report </a>
+    <div class="ac_footer"><span> © 2024 Copyright. All rights reserved.</span>
+        <br>
+        <a href="//febaleo.cc/content/shared/html/policy_en.html" target="_blank"> Privacy policy </a> | <a href="http://ac-feedback.com/report_form/"> Report </a>
         <p></p>
         <script>
             typeof adc_clearFooter !== 'undefined' && adc_clearFooter();
         </script>
     </div>
-    <script type='text/javascript'>
-        function inputElem(name, value) {
-            let element = document.createElement("input");
-            element.setAttribute("type", "hidden");
-            element.setAttribute("name", name);
-            element.setAttribute("value", value);
-            return element;
-        }
-        document.querySelectorAll('form').forEach(
-            form => {
-                form.appendChild(inputElem("referrer", ""));
-                form.appendChild(inputElem("ip", "77.246.145.57"));
-                form.appendChild(inputElem("ip_country", "RU"));
-                form.appendChild(inputElem("ip_country_name", "Russia"));
-                // Here be custom parameters
-
-            }
-        );
-    </script>
-
 </html>
